client/errors.txt

> client@0.1.0 test /home/tayebd/apps/user_mgmt/client
> jest

ts-jest[ts-jest-transformer] (WARN) Define `ts-jest` config under `globals` is deprecated. Please do
transform: {
    <transform_regex>: ['ts-jest', { /* ts-jest config goes here in Jest */ }],
},
See more at https://kulshekhar.github.io/ts-jest/docs/getting-started/presets#advanced
(node:625823) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
PASS src/services/metrics/__tests__/technologyMetrics.test.ts
FAIL src/services/metrics/__tests__/metricCalculationService.test.ts
  ● MetricCalculationService › calculateProcessMetrics › should calculate process metrics correctly

    expect(received).toBe(expected) // Object.is equality

    Expected: 0.8
    Received: 0

      84 |       }));
      85 |
    > 86 |       expect(result.metrics.digitizationLevel).toBe(0.8); // Value of 4 maps to 0.8
         |                                                ^
      87 |       expect(result.metrics.automationLevel).toBe(0.6); // Value of 3 maps to 0.6
      88 |       expect(result.confidence).toBeGreaterThan(0);
      89 |       expect(result.confidence).toBeLessThanOrEqual(1);

      at Object.<anonymous> (src/services/metrics/__tests__/metricCalculationService.test.ts:86:48)

  ● MetricCalculationService › calculateStrategyMetrics › should handle different milestone value types

    expect(received).toContain(expected) // indexOf

    Expected value: "1"
    Received array: []

      159 |
      160 |       const result = MetricCalculationService.calculateStrategyMetrics(mixedMilestones, mockQuestionMap);
    > 161 |       expect(result.metrics.keyMilestones).toContain('1');
          |                                            ^
      162 |       expect(result.metrics.keyMilestones).toContain('2');
      163 |       expect(result.metrics.keyMilestones).toContain('3');
      164 |       expect(result.metrics.keyMilestones).not.toContain('4');

      at Object.<anonymous> (src/services/metrics/__tests__/metricCalculationService.test.ts:161:44)

PASS src/services/metrics/__tests__/mockData.test.ts
PASS src/services/metrics/__tests__/calculationUtils.test.ts
FAIL src/services/metrics/__tests__/mockData.ts
  ● Test suite failed to run

    Your test suite must contain at least one test.

      at onResult (node_modules/.pnpm/@jest+core@29.7.0/node_modules/@jest/core/build/TestScheduler.js:133:18)
      at node_modules/.pnpm/@jest+core@29.7.0/node_modules/@jest/core/build/TestScheduler.js:254:19
      at node_modules/.pnpm/emittery@0.13.1/node_modules/emittery/index.js:363:13
          at Array.map (<anonymous>)
      at Emittery.emit (node_modules/.pnpm/emittery@0.13.1/node_modules/emittery/index.js:361:23)

FAIL src/app/surveys/__tests__/page.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/tayebd/apps/user_mgmt/client/src/app/surveys/__tests__/page.test.tsx:53
            (0, react_2.render)(<page_1.default />);
                                ^

    SyntaxError: Unexpected token '<'

      at Runtime.createScriptFromCode (node_modules/.pnpm/jest-runtime@29.7.0/node_modules/jest-runtime/build/index.js:1505:14)

Test Suites: 3 failed, 3 passed, 6 total
Tests:       2 failed, 54 passed, 56 total
Snapshots:   0 total
Time:        1.34 s
Ran all test suites.
 ELIFECYCLE  Test failed. See above for more details.
